fix: kiali operator memory bump to fix OOM kill

--- a/values/kiali.yaml
+++ b/values/kiali.yaml
@@ -9,7 +9,7 @@ kiali:
         memory: "512Mi"
       limits:
         cpu: "500m"
-        memory: "1200Mi"
+        memory: "2Gi"
     cr:
       spec:
         deployment:
