--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -23,8 +23,9 @@ variables:
     default: "/run/k3s/containerd/containerd.sock"
     description: "Path for container runtime socket"
     prompt: false
-  - name: ADD_DUBBD_VALUES
-    default: deploy-add-dubbd-values.yaml
+  - name: DUBBD_VALUES
+    description: "Path to a local values file that includes configuration to be used at deploy time (does not support enabling or disabling charts)"
+    default: deploy-dubbd-values.yaml
     prompt: false
     type: file
     autoIndent: true
