--- a/rke2/zarf.yaml
+++ b/rke2/zarf.yaml
@@ -26,8 +26,9 @@ variables:
   - name: EXEMPT_NAMESPACES
     description: "List of namespaces to be exempt from cluster policies (must contain zarf)"
     default: '[ "zarf" ]'
-  - name: ADD_DUBBD_VALUES
-    default: deploy-add-dubbd-values.yaml
+  - name: DUBBD_VALUES
+    description: "Path to a local values file that includes configuration to be used at deploy time (does not support enabling or disabling charts)"
+    default: deploy-dubbd-values.yaml
     prompt: false
     type: file
     autoIndent: true
