feat: additional dubbd helm values via zarf var (#511)
* feat: additional dubbd helm values via zarf var

* fix: yamllint newline required

* fix: address values file warning & single zarf var

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -49,6 +49,14 @@ variables:
     description: "List of namespaces to be exempt from cluster policies (must contain zarf)"
     default: '[ "zarf", "calico-apiserver", "calico-system", "tigera-operator" ]'
 
+  - name: DUBBD_VALUES
+    description: "Path to a local values file that includes configuration to be used at deploy time (does not support enabling or disabling charts)"
+    default: deploy-dubbd-values.yaml
+    prompt: false
+    type: file
+    autoIndent: true
+
+
 components:
   - name: set-ephemeral
     required: true
@@ -366,6 +374,7 @@ components:
           - ../values/aws-loki.yaml
           - ../values/aws-velero.yaml
           - ../values/aws-storage-class.yaml
+          - ../values/add-dubbd-values.yaml
     actions:
       onDeploy:
         before:
