--- a/rke2/zarf.yaml
+++ b/rke2/zarf.yaml
@@ -26,6 +26,12 @@ variables:
   - name: EXEMPT_NAMESPACES
     description: "List of namespaces to be exempt from cluster policies (must contain zarf)"
     default: '[ "zarf" ]'
+  - name: DUBBD_VALUES
+    description: "Path to a local values file that includes configuration to be used at deploy time (does not support enabling or disabling charts)"
+    default: deploy-dubbd-values.yaml
+    prompt: false
+    type: file
+    autoIndent: true
 
 components:
   - name: set-ephemeral
@@ -59,6 +65,8 @@ components:
     extensions:
       bigbang:
         version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
+        valuesFiles:
+          - values/add-dubbd-values.yaml
   - name: dubbd-post-upgrade
     required: true
     import:
