chore(deps): update gitlab tag big-bang/bigbang to v2.8.0
This PR contains the following updates:

| Package | Update | Change |
|---|---|---|
| [big-bang/bigbang](https://repo1.dso.mil/big-bang/bigbang) | minor | `2.7.1` -> `2.8.0` |

---

--- a/aws/values/aws-velero.yaml
+++ b/aws/values/aws-velero.yaml
@@ -6,19 +6,16 @@ addons:
     values:
       configuration:
         backupStorageLocation:
+        - name: default
+          provider: aws
           bucket: "###ZARF_VAR_VELERO_S3_BUCKET###"
           config:
             region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
-          provider: aws
-        provider: aws
         volumeSnapshotLocation:
+        - name: default
+          provider: aws
           config:
             region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
-          provider: aws
-      serviceAccount:
-        server:
-          annotations:
-            eks.amazonaws.com/role-arn: "###ZARF_VAR_VELERO_S3_ROLE_ARN###"
       schedules:
         udsbackup:
           disabled: false
@@ -30,3 +27,9 @@ addons:
               - monitoring
               - tempo
             ttl: "240h"
+      serviceAccount:
+        server:
+          create: true
+          annotations:
+            eks.amazonaws.com/role-arn: "###ZARF_VAR_VELERO_S3_ROLE_ARN###"
+
