add to rke2 and dubbd aws

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -183,6 +183,10 @@ components:
     required: true
     import:
       path: ../external-dns
+  - name: keycloak
+    required: true
+    import:
+      path: ../../defense-unicorns-distro
   - name: dubbd-post-upgrade
     required: true
     actions:
