--- a/.github/workflows/test-dubbd-aws-install.yaml
+++ b/.github/workflows/test-dubbd-aws-install.yaml
@@ -73,6 +73,7 @@ jobs:
           zarf init -a amd64 --components=git-server --confirm
 
       - name: Deploy DUBBD-IAC-AWS
+        id: deploy-dubbd-iac-aws
         env:
           SHA: ${{ github.sha }}
         run: |
@@ -88,7 +89,7 @@ jobs:
             --confirm
 
             # adds ZARF_PACKAGE_DEPLOY_SET env var for use in zarf package deploy
-            awk '{$1= ""; print $0}' setenv-dubbd-package.sh >> $GITHUB_OUTPUT
+            echo "zarf_pkg_env_vars=$(cat setenv-dubbd-package.sh)" >> $GITHUB_OUTPUT
         working-directory: .github/workflows/dubbd-iac-aws
         timeout-minutes: 60
 
@@ -96,6 +97,8 @@ jobs:
         env:
           SHA: ${{ github.sha }}
         run: |
+          ${{ steps.deploy-dubbd-iac-aws.outputs.zarf_pkg_env_vars }}
+          env | grep ZARF_PACKAGE_DEPLOY_SET
           zarf package deploy zarf-package-*.tar.zst --confirm
         working-directory: aws/dubbd-aws
         timeout-minutes: 60
