ci: add missing zarf vars and step

--- a/.github/workflows/dubbd-iac-aws/zarf.yaml
+++ b/.github/workflows/dubbd-iac-aws/zarf.yaml
@@ -304,8 +304,9 @@ components:
               "STATE_BUCKET_NAME": "${ZARF_VAR_STATE_BUCKET_NAME}", \
               "STATE_KEY": "${ZARF_VAR_STATE_KEY}", \
               "STATE_DYNAMODB_TABLE_NAME": "${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}", \
-              "EPHEMERAL": "${ZARF_VAR_EPHEMERAL}", \
+              "NAME": "${ZARF_VAR_NAME}", \
               "REGION": "${ZARF_VAR_REGION}", \
+              "EPHEMERAL": "${ZARF_VAR_EPHEMERAL}", \
               "LOKI_FORCE_DESTROY": "${ZARF_VAR_LOKI_FORCE_DESTROY}", \
               "VELERO_FORCE_DESTROY": "${ZARF_VAR_VELERO_FORCE_DESTROY}", \
               "LOKI_S3_BUCKET": "${ZARF_VAR_LOKI_S3_BUCKET}", \
