--- a/.github/workflows/test-dubbd-aws-install.yaml
+++ b/.github/workflows/test-dubbd-aws-install.yaml
@@ -15,6 +15,9 @@ jobs:
       - name: Maximize build space
         uses: easimon/maximize-build-space@v8
         with:
+          root-reserve-mb: '40960'
+          temp-reserve-mb: '1024'
+          swap-size-mb: '4096'
           remove-dotnet: 'true'
           remove-android: 'true'
           remove-haskell: 'true'
