feat: oscal velero

--- a/.github/workflows/oscal/config-dubbd-aws-oscal-component.yaml
+++ b/.github/workflows/oscal/config-dubbd-aws-oscal-component.yaml
@@ -11,6 +11,8 @@ metadata: # OSCAL-compliant metadata
           rel: website
       type: organization
 components: # Define paths on the local filesystem or remote paths in git repositories to OSCAL component definition files
+  local:
+    - name: aws/velero/oscal-component.yaml
   remote:
     - git: https://repo1.dso.mil/big-bang/product/packages/kiali.git@1.71.0-bb.1
       path: oscal-component.yaml
