neuvector reload oidcinit config

--- a/defense-unicorns-distro/idam/zarf.yaml
+++ b/defense-unicorns-distro/idam/zarf.yaml
@@ -94,3 +94,7 @@ components:
           - cmd: ./zarf tools wait-for HelmRelease keycloak ready -n bigbang
             maxRetries: 3
             maxTotalSeconds: 300
+          - cmd: ./zarf tools kubectl scale deployment/neuvector-controller-pod --replicas 4 -n neuvector
+          - cmd: ./zarf tools wait-for deployment neuvector-controller-pod available -n neuvector
+          - cmd: ./zarf tools kubectl scale deployment/neuvector-controller-pod --replicas 3 -n neuvector
+
