make keycloak optional

--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -184,7 +184,7 @@ components:
     import:
       path: ../external-dns
   - name: keycloak
-    required: true
+    required: false
     import:
       path: ../../defense-unicorns-distro
   - name: dubbd-post-upgrade
