--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -62,7 +62,7 @@ components:
           - values/local-dev.yaml
           - values/add-dubbd-values.yaml
   - name: keycloak
-    required: true
+    required: false
     import:
       path: ../defense-unicorns-distro
   - name: dubbd-post-upgrade
