ci: rename dubbd-iac-aws to ci-dubbd-iac-aws

--- a/.github/workflows/ci-dubbd-iac-aws/zarf.yaml
+++ b/.github/workflows/ci-dubbd-iac-aws/zarf.yaml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/defenseunicorns/zarf/main/zarf.schema.json
 kind: ZarfPackageConfig
 metadata:
-  name: dubbd-iac-aws
-  description: "DUBBD IAC AWS"
+  name: ci-dubbd-iac-aws
+  description: "CI - DUBBD IAC AWS (not for Prod use)"
   # x-release-please-start-version
   version: "0.7.0"
   # x-release-please-end
