provide idam values variable

--- a/values/idam-values.yaml
+++ b/values/idam-values.yaml
@@ -1,51 +1,1 @@
-grafana:
-  values:
-    grafana.ini:
-      auth.generic_oauth:
-        enabled: true
-        name: IDAM
-        client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_grafana
-        client_secret: secret
-        scopes: openid Grafana
-        auth_url: https://keycloak.###ZARF_VAR_DOMAIN###/auth/realms/###ZARF_VAR_REALM###/protocol/openid-connect/auth
-        token_url: https://keycloak.###ZARF_VAR_DOMAIN###/auth/realms/###ZARF_VAR_REALM###/protocol/openid-connect/token
-        api_url: https://keycloak.###ZARF_VAR_DOMAIN###/auth/realms/###ZARF_VAR_REALM###/protocol/openid-connect/userinfo
-        role_attribute_path: Viewer
-neuvector:
-  values:
-    controller:
-      secret:
-        data:
-          oidcinitcfg.yaml:
-            always_reload: true
-            enable: true
-            issuer: https://keycloak.###ZARF_VAR_DOMAIN###/auth/realms/###ZARF_VAR_REALM###
-            client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_neuvector
-            client_secret: "**********"
-            default_role: admin
-kiali:
-  values:
-    cr:
-      spec:
-        auth:
-          strategy: openid
-          openid:
-            client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_kiali
-            disable_rbac: true
-            issuer_uri: https://keycloak.###ZARF_VAR_DOMAIN###/auth/realms/###ZARF_VAR_REALM###
-            scopes:
-              - openid
-              - email
-            username_claim: email
-
-istio:
-  ingressGateways:
-    keycloak-ingressgateway:
-      type: "LoadBalancer"
-  gateways:
-    passthrough:
-      ingressGateway: "keycloak-ingressgateway"
-      hosts:
-        - keycloak.###ZARF_VAR_DOMAIN###
-      tls:
-        mode: "PASSTHROUGH"
+###ZARF_VAR_DUBBD_IDAM_VALUES###
