--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -58,6 +58,12 @@ variables:
     prompt: false
     type: file
     autoIndent: true
+  - name: DUBBD_IDAM_VALUES
+    description: "Path to a local values file that includes IDAM configuration for DUBBD applications"
+    default: deploy-idam-values.yaml
+    prompt: false
+    type: file
+    autoIndent: true
 
 components:
   - name: set-ephemeral
@@ -304,6 +310,8 @@ components:
       - source: scripts/on_failure.sh
         target: on_failure.sh
         executable: true
+      - source: deploy-idam-values-template.yaml
+        target: deploy-idam-values.yaml
     manifests:
       - name: slack-alerts
         files:
