--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -23,6 +23,12 @@ variables:
     default: "/run/k3s/containerd/containerd.sock"
     description: "Path for container runtime socket"
     prompt: false
+  - name: DUBBD_IDAM_VALUES
+    description: "Path to a local values file that includes IDAM configuration for DUBBD applications"
+    default: deploy-idam-values.yaml
+    prompt: false
+    type: file
+    autoIndent: true
   - name: DUBBD_VALUES
     description: "Path to a local values file that includes configuration to be used at deploy time (does not support enabling or disabling charts)"
     default: deploy-dubbd-values.yaml
